[package]
name = "lta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.0.32", features = ["derive"]}
itertools = "0.10.5"
lazy_static = "1.4.0"
lol_html = "0.3.3"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"]}
slug = "0.1.4"
test-case = "3.0.0"
toml = "0.7.2"
